Spacing issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,10 @@
   left: 50%;
   transform: translate(-50%);
   width: 100%;
-  height: 700%;
+  height: 600vh;
   overflow: hidden;
   background: transparent;
   mix-blend-mode: difference;
-  /* display: none; */
 }
 
 .separator {
@@ -274,7 +273,7 @@ svg:hover  #Vector_2{
   grid-column-gap: 0px;
   place-items: center;
   width: 100%;
-  height: 400vh;
+  max-height: 400vh;
   background: transparent;
   margin-top: 2rem;
 }
@@ -284,7 +283,7 @@ svg:hover  #Vector_2{
   grid-row-start: 1;
   grid-row-end: 1;
   width: 100%;
-  height: 40vh;
+  max-height: 40vh;
   background: transparent;
   display: flex;
   justify-content: center;
@@ -467,7 +466,7 @@ svg:hover  #Vector_2{
 }
 .m{
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   padding: 0 4rem;
   background: white;
   grid-column-start: 1;
@@ -485,7 +484,7 @@ svg:hover  #Vector_2{
   grid-row-start: 2;
   grid-row-end: 2;
   width: calc(100%);
-  height: calc(70vh);
+  height: calc(50vh);
   background: transparent;
   display: flex;
   justify-content: center;
@@ -507,7 +506,7 @@ svg:hover  #Vector_2{
   grid-column-gap: 0px;
   place-items: center;
   width: 100%;
-  height: 60vh;
+  max-height: 60vh;
   font-family: var(--family);
   font-size: var(--font-p-size);
   font-weight: var(--font-weight-normal);
@@ -555,42 +554,15 @@ svg:hover  #Vector_2{
   color: #000;
 }
 
-/* 
-@media only screen and (min-width: 1280px){
-  .container{
-    aspect-ratio: 1/1;
-  }
-  .line__container{
-    display: none;
-  }
-  .project-container{
-    height: 300vh;
-  }
-  .e{
-    top: 20%;
-  }
-  .f{
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 2;
-  }
-  #image{
-    width: calc(60%);
-    top: 30%;
-  }
-  #image img{
-    width: 765px;
-    height: 446px;
-    object-fit: fill;
-  }
-} */
-
 /* Media Queries at 1100PX */
 
 @media only screen and (max-width: 1100px) {
   .container {
     aspect-ratio: 1/1;
+  }
+
+  .line__container{
+    height: 600vh;
   }
 
   .b {
@@ -629,6 +601,9 @@ svg:hover  #Vector_2{
   }
 }
 @media only screen and (max-width: 720px){
+  .line__container{
+    height: 650vh;
+  }
   .e span {
     font-size: var(--font-heading-size-3);
   }
@@ -638,7 +613,9 @@ svg:hover  #Vector_2{
   .container {
     aspect-ratio: 16/9;
   }
-
+  .line__container{
+    height: 600vh;
+  }
   .separator:nth-child(1) {
     left: calc(100% / 2);
   }
